Renamed DemoUc1Console.java to DemoConsole. Code cleanups and removed 3 unused classes.